--- a/_sass/theme/_resume.scss
+++ b/_sass/theme/_resume.scss
@@ -6,22 +6,26 @@
 		width: unset;
 		margin-bottom: 4rem;
 		padding: 0;
-		max-width: 447px;
+		// max-width: 447px;
+		max-width: unset;
+		margin-left: 0;
+		margin-right: 0;
 		grid-gap: 0;
 		@include media-query($shmedium) {
 			max-width: unset;
 		}
-		@include media-query($medium) {
-			width: calc(768px - (8px * 8));
-		}
+		// @include media-query($medium) {
+		// 	width: calc(768px - (8px * 8));
+		// }
 		@include media-query($regular) {
 			width: calc(1024px - (8px * 8));
+			margin-left: auto;
+			margin-right: auto;
 		}
 	}
 	.post-meta {
 		max-width: 980px; 
-		margin-left: 1rem;
-		margin-right: 1rem;
+		margin-left: 0;
 		grid-template-columns: 1fr;
 		grid-template-rows: 1fr;
 		grid-row-gap: .5rem;		
@@ -44,8 +48,10 @@
 		margin-left: 2px;
 	}
 	.profile {
-		max-height: 140px;
-		max-width: 140px;
+		max-height: unset;
+		max-width: unset;
+		height: 140px;
+		width: 140px;
 		border-radius: 100%;
 		clip-path: url(#coin-path);
 		margin: 0 0 1rem 10px;
